@@ -27,12 +27,12 @@ import java.io.Serializable;
 import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Iterator;
 import java.util.List;
 import java.util.Vector;
 
 import jeeves.constants.Jeeves;
 import jeeves.resources.dbms.Dbms;
-import jeeves.server.ProfileManager;
 import jeeves.server.UserSession;
 import jeeves.server.context.ServiceContext;
 import jeeves.utils.Log;
@@ -40,13 +40,16 @@ import jeeves.utils.Util;
 import jeeves.utils.Xml;
 import jeeves.xlink.Processor;
 
+import org.apache.log4j.Priority;
 import org.fao.geonet.GeonetContext;
 import org.fao.geonet.constants.Geonet;
 import org.fao.geonet.kernel.setting.SettingManager;
 import org.fao.geonet.util.ISODate;
 import org.jdom.Attribute;
 import org.jdom.Element;
+import org.jdom.JDOMException;
 import org.jdom.Namespace;
+import org.jdom.filter.Filter;
 
 /**
  * This class is responsible of reading and writing xml on the database. 
@@ -55,6 +58,23 @@ import org.jdom.Namespace;
 public abstract class XmlSerializer {
 
 	private static final List<Namespace> XML_SELECT_NAMESPACE = Arrays.asList(Geonet.Namespaces.GCO);
+	private static final String WITHHELD = "withheld";	
+	@SuppressWarnings("serial")
+	private static final Filter EMPTY_WITHHELD = new Filter() {
+		
+		@Override
+		public boolean matches(Object obj) {
+			if (obj instanceof Element) {
+				Element elem = (Element) obj;
+				String withheld = elem.getAttributeValue("nilReason", Geonet.Namespaces.GCO);
+				if(WITHHELD.equalsIgnoreCase(withheld) && elem.getChildren().size() == 0 && elem.getTextTrim().isEmpty()) {
+					return true;
+				}
+			}
+			return false;
+		}
+	};
+	
 	protected SettingManager sm;
 
 	public static class ThreadLocalConfiguration {
@@ -77,6 +97,9 @@ public abstract class XmlSerializer {
 	    }
 	    
 	    return config;
+	}
+	public static void clearThreadLocal() {
+		configThreadLocal.set(null);
 	}
 	
     /**
@@ -121,7 +144,7 @@ public abstract class XmlSerializer {
      */
 	protected Element internalSelect(Dbms dbms, String table, String id, boolean isIndexingTask, ServiceContext srvContext) throws Exception {
 		String query = "SELECT * FROM " + table + " WHERE id = ?";
-		Element select = dbms.select(query, new Integer(id));
+		Element select = dbms.select(query, Integer.valueOf(id));
 		Element record = select.getChild(Jeeves.Elem.RECORD);
 
 		if (record == null)
@@ -130,24 +153,63 @@ public abstract class XmlSerializer {
 		String xmlData = record.getChildText("data");
 		Element metadata = Xml.loadString(xmlData, false);
 
+		logEmptyWithheld(id, metadata, "XmlSerializer.internalSelect");
+		
 		if (!isIndexingTask) { 
     		boolean hideWithheldElements = sm.getValueAsBool("system/"+Geonet.Config.HIDE_WITHHELD_ELEMENTS+"/enable", false);
-    		if(ServiceContext.get() != null) {
     			ServiceContext context = ServiceContext.get();
+    		if(context != null) {
     			GeonetContext gc = (GeonetContext) context.getHandlerContext(Geonet.CONTEXT_NAME);
-    			String ownerId = record.getChildText("owner");
-    			UserSession userSession = context.getUserSession();
-    			boolean isOwner = userSession != null && ownerId != null && ownerId.equals(userSession.getUserId());
-    			boolean isAdmin = userSession != null && userSession.getProfile() != null && context.getProfileManager().getProfilesSet(userSession.getProfile()).contains(ProfileManager.ADMIN);
-    			// TODO: improve XmlSerializerTest for that UC
-    			boolean canEdit = userSession != null && gc != null && gc.getAccessManager().hasEditPermission(context, id);
-    			if(isAdmin || isOwner || canEdit) {
+    			boolean canEdit = gc.getAccessManager().canEdit(context, id);
+    			if(canEdit) {
     				hideWithheldElements = false;
     			}
     		}
-    		boolean keepMarkedElement = sm.getValueAsBool("system/"+Geonet.Config.HIDE_WITHHELD_ELEMENTS+"/keepMarkedElement", false);
     		if (hideWithheldElements || (getThreadLocal(false) != null && getThreadLocal(false).forceHideWithheld)) {
-    			List<?> nodes = Xml.selectNodes(metadata, "*[@gco:nilReason = 'withheld'] | *//*[@gco:nilReason = 'withheld']", XML_SELECT_NAMESPACE);
+    		    removeWithheldElements(metadata, sm);
+    		}
+		}
+		return (Element) metadata.detach();
+	}
+
+    private boolean logEmptyWithheld(String id, Element metadata, String methodName) {
+        boolean hideWithheldElements = sm.getValueAsBool("system/" + Geonet.Config.HIDE_WITHHELD_ELEMENTS + "/enable", false);
+        if (hideWithheldElements && Log.isEnabledFor(Geonet.DATA_MANAGER, Priority.WARN_INT)) {
+            Iterator<?> emptyWithheld = metadata.getDescendants(EMPTY_WITHHELD);
+            if (emptyWithheld.hasNext()) {
+                StringBuilder withheld = new StringBuilder();
+                while (emptyWithheld.hasNext()) {
+                    Element next = (Element) emptyWithheld.next();
+                    withheld.append("\n    ");
+                    xpath(withheld, next);
+                }
+                Log.warning(Geonet.DATA_MANAGER, "[" + WITHHELD + "] " + "In method [" + methodName + "] Metadata id=" + id
+                        + " has withheld elements that don't contain any data: " + withheld);
+                return true;
+            }
+        }
+        return false;
+    }
+    private void xpath(StringBuilder buffer, Element next) {
+		if(next.getParentElement() != null) {
+			xpath(buffer, next.getParentElement());
+			buffer.append("/");
+		}
+		
+		String name = next.getName();
+		Namespace namespace = next.getNamespace();
+		buffer.append(namespace.getPrefix()).append(":").append(name);
+		if(next.getParentElement() != null) {
+			List<?> children = next.getParentElement().getChildren(name, namespace);
+			if(children.size() > 1) {
+				buffer.append('[').append(children.indexOf(next)+1).append(']');
+			}
+		}
+	}
+
+	public static void removeWithheldElements(Element metadata, SettingManager sm) throws JDOMException {
+    		boolean keepMarkedElement = sm.getValueAsBool("system/"+Geonet.Config.HIDE_WITHHELD_ELEMENTS+"/keepMarkedElement", false);
+        List<?> nodes = Xml.selectNodes(metadata, "*[@gco:nilReason = '"+WITHHELD+"'] | *//*[@gco:nilReason = '"+WITHHELD+"']", XML_SELECT_NAMESPACE);
     			for (Object object : nodes) {
     				if (object instanceof Element) {
     					Element element = (Element) object;
@@ -168,9 +230,6 @@ public abstract class XmlSerializer {
     				}
     			}
     		}
-		}
-		return (Element) metadata.detach();
-	}
 
     /**
      * TODO javadoc.
@@ -230,7 +289,7 @@ public abstract class XmlSerializer {
 		if (groupOwner != null) {
 			fields.append(", groupOwner");
 			values.append(", ?");
-			args.add(new Integer(groupOwner));
+			args.add(Integer.valueOf(groupOwner));
 		}
 
 		if (title != null)
@@ -259,13 +318,38 @@ public abstract class XmlSerializer {
      */
 	protected void updateDb(Dbms dbms, String id, Element xml, String changeDate, String root, boolean updateDateStamp, String uuid) throws SQLException {
 		if (false && resolveXLinks()) Processor.removeXLink(xml);
+        if (logEmptyWithheld(id, xml, "XmlSerializer.updateDb")) {
+            StackTraceElement[] stacktrace = new Exception("").getStackTrace();
+            StringBuffer info = new StringBuffer();
+            info.append('[').append(WITHHELD).append(']');
+            info.append("Extra information related to updating the metadata with an empty withheld element:");
+            final String indent = "\n    ";
+            ServiceContext serviceContext = ServiceContext.get();
+            if (serviceContext != null) {
+                UserSession userSession = serviceContext.getUserSession();
+                if (userSession != null) {
+                    UserSession session = userSession;
+                    info.append(indent).append("User: ").append(session.getUsername());
+                    info.append(indent).append("Userid: ").append(session.getUserId());
+                }
+                info.append(indent).append("IP: ").append(serviceContext.getIpAddress());
+            }
 
-		
-		Vector<Serializable> args = new Vector<Serializable>();
+            info.append(indent).append("StackTrace: ");
+            final String doubleIndent = "\n        ";
+            for (int i = 0; i < stacktrace.length; i++) {
+                StackTraceElement traceElement = stacktrace[i];
+                if (traceElement.getClassName().startsWith("org.fao.geonet")) {
+                    info.append(doubleIndent).append(traceElement.getClassName()).append('.').append(traceElement.getMethodName())
+                            .append('(').append(traceElement.getLineNumber()).append(')');
+                }
+            }
+            Log.warning(Geonet.DATA_MANAGER, info.toString());
+        }
 
 		fixCR(xml);
 		String metadata = Xml.getString(xml);
-		int metadataId = new Integer(id);
+		int metadataId = Integer.valueOf(id);
 		
         if (updateDateStamp)  {
             if (changeDate == null)	{
@@ -302,7 +386,7 @@ public abstract class XmlSerializer {
 		// that aren't already in use from the xlink cache. For now we
 		// rely on the admin clearing cache and reindexing regularly
 		String query = "DELETE FROM " + table + " WHERE id=?";
-		dbms.execute(query, new Integer(id));
+		dbms.execute(query, Integer.valueOf(id));
 	}
 
     /**
@@ -310,7 +394,7 @@ public abstract class XmlSerializer {
      * @param xml
      */
 	private void fixCR(Element xml) {
-		List list = xml.getChildren();
+		List<?> list = xml.getChildren();
 		if (list.size() == 0) {
 			String text = xml.getText();
 			xml.setText(Util.replaceString(text, "\r\n", "\n"));
