@@ -24,7 +24,6 @@
 package org.fao.geonet.services.user;
 
 import jeeves.constants.Jeeves;
-import jeeves.interfaces.Service;
 import jeeves.resources.dbms.Dbms;
 import jeeves.server.ServiceConfig;
 import jeeves.server.UserSession;
@@ -36,19 +35,16 @@ import org.fao.geonet.GeonetContext;
 import org.fao.geonet.kernel.DataManager;
 import org.fao.geonet.constants.Geonet;
 import org.fao.geonet.constants.Params;
+import org.fao.geonet.services.NotInReadOnlyModeService;
 import org.fao.geonet.kernel.reusable.ReusableTypes;
 import org.fao.geonet.services.reusable.Reject;
 import org.fao.geonet.util.LangUtils;
 import org.jdom.Element;
-import java.util.List;
 
-//=============================================================================
-
-/** Removes a user from the system. It removes the relationship to a group too
+/**
+ * Removes a user from the system. It removes the relationship to a group too.
   */
-
-public class Remove implements Service
-{
+public class Remove extends NotInReadOnlyModeService {
 	private Type type;
 
     //--------------------------------------------------------------------------
@@ -67,7 +63,7 @@ public class Remove implements Service
 	//---
 	//--------------------------------------------------------------------------
 
-    public Element exec(Element params, ServiceContext context) throws Exception
+	public Element serviceSpecificExec(Element params, ServiceContext context) throws Exception
 	{
 		String id = Util.getParam(params, Params.ID);
 
@@ -94,7 +90,7 @@ public class Remove implements Service
 			Dbms dbms = (Dbms) context.getResourceManager().open (Geonet.Res.MAIN_DB);
 			
 			if (myProfile.equals("UserAdmin")) {
-				Element admin = dbms.select("SELECT groupId FROM UserGroups WHERE userId=? or userId=? group by groupId having count(*) > 1", new Integer(myUserId), iId);
+				Element admin = dbms.select("SELECT groupId FROM UserGroups WHERE userId=? or userId=? group by groupId having count(*) > 1", Integer.valueOf(myUserId), iId);
 				if (admin.getChildren().size() == 0) {
 				  throw new IllegalArgumentException("You don't have rights to delete this user because the user is not part of your group");
 				}
